--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,9 @@
 			<id>iscpif-ign-releases</id>
 			<name>ISCPIF Release repository for IGN</name>
 			<url>http://maven.iscpif.fr/ign-releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 		<repository>
 			<id>Central</id>
@@ -281,28 +284,6 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-		</repository>
-		<repository>
-			<id>cogit-snapshots</id>
-			<name>Cogit Snapshots Repository</name>
-			<url>https://forge-cogit.ign.fr/nexus/content/repositories/snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>cogit-releases</id>
-			<name>Cogit Releases Repository</name>
-			<url>https://forge-cogit.ign.fr/nexus/content/repositories/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
 		</repository>
 		<repository>
 			<id>Imagej</id>
@@ -322,6 +303,9 @@
 		<repository>
 			<id>osgeo-geotools</id>
 			<url>http://download.osgeo.org/webdav/geotools/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
@@ -367,19 +351,14 @@
 	</dependencies>
 	<distributionManagement>
 		<repository>
-			<id>cogit-releases</id>
-			<name>Nexus Releases Repository</name>
-			<url>https://forge-cogit.ign.fr/nexus/content/repositories/releases</url>
+			<id>iscpif-ign-releases</id>
+			<name>ISCPIF Release repository for IGN</name>
+			<url>http://maven.iscpif.fr/ign-releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>cogit-snapshots</id>
-			<name>Nexus Snapshots Repository</name>
-			<url>https://forge-cogit.ign.fr/nexus/content/repositories/snapshots/</url>
+			<id>iscpif-ign-snapshots</id>
+			<name>ISCPIF Snapshot repository for IGN</name>
+			<url>http://maven.iscpif.fr/ign-snapshots/</url>
 		</snapshotRepository>
-		<!-- <repository> <id>iscpif-ign-releases</id> <name>ISCPIF Release repository 
-			for IGN</name> <url>http://maven.iscpif.fr/ign-releases/</url> </repository> 
-			<snapshotRepository> <id>iscpif-ign-snapshots</id> <name>ISCPIF Snapshot 
-			repository for IGN</name> <url>http://maven.iscpif.fr/ign-snapshots/</url> 
-			</snapshotRepository> -->
 	</distributionManagement>
 </project>
