--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,6 @@
 				<configuration>
 					<compilerVersion>1.8</compilerVersion>
 					<source>1.8</source>
-					<complianceLevel>1.8</complianceLevel>
 					<target>1.8</target>
 					<includes>
 						<include>**/*</include>
@@ -343,7 +342,32 @@
 			<artifactId>librjmcmc4j-geometry</artifactId>
 			<version>${librjmcmc4j.version}</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 	<distributionManagement>
 		<repository>
 			<id>ign-releases</id>
