--- a/pom.xml
+++ b/pom.xml
@@ -295,19 +295,12 @@
 			</releases>
 		</repository>
 		<repository>
-			<id>Imagej</id>
-			<url>http://maven.imagej.net/content/repositories/public</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>osgeo-geotools</id>
-			<url>http://download.osgeo.org/webdav/geotools/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
+		    <id>osgeo</id>
+			<name>Open Source Geospatial Foundation Repository</name>
+			<url>https://repo.osgeo.org/repository/release/</url>
+		    <snapshots><enabled>false</enabled></snapshots>
+		    <releases><enabled>true</enabled></releases>
+		  </repository>
 	</repositories>
 
 	<dependencies>
